# localforge

./: .editorconfig  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  __main__.py  localforge.yaml.example  pyproject.toml  requirements-full.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
agent-configs/claude/: CLAUDE.md
agent-configs/codex/: AGENTS.md
agent-configs/cursor/: .cursorrules
agent-configs/generic/: AGENT.md
clients/: blender_client.py
docs/: ARCHITECTURE.md  RECIPE-AUTHORING.md  ROADMAP.md  TOOL-DEVELOPMENT.md  TOOL-SETUP.md  USE-CASES.md
engine/: __init__.py  config.py  persistence.py  runner.py
localforge/: __init__.py  __main__.py
localforge/clients/: __init__.py  blender_client.py  sd_client.py
localforge/data/: model_profiles.yaml
localforge/engine/: __init__.py  config.py  persistence.py  runner.py  system_info.py
localforge/scripts/: __init__.py  setup.py
localforge/tools/: __init__.py  _image_utils.py  acestep_tool.py  batch_tool.py  blender_tool.py  ffmpeg_tool.py  file_tool.py  image_tool.py  musicgen_tool.py  ollama_tool.py  script_tool.py  sd_tool.py  validator_tool.py
recipes/: TEMPLATE.yaml
recipes/domains/game-dev/: 3d-model.yaml  game-sprite.yaml  music-track.yaml  tileset.yaml
recipes/examples/: batch-resize.yaml  code-review.yaml  data-extract.yaml  game-sprite.yaml  music-track.yaml  text-pipeline.yaml  tileset.yaml
recipes/getting-started/: hello-localforge.yaml  hello-ollama.yaml  hello-sd.yaml
scripts/: health_check.py  setup.py
tests/: test_config.py  test_context.py  test_recipes.py  test_system_info.py  test_tool_discovery.py
tools/: acestep_tool.py  file_tool.py  image_tool.py  musicgen_tool.py  validator_tool.py
